tests/ui/invalid_pyfunction_definition.stderr
error: functions inside #[pymethods] do not need to be annotated with #[pyfunction]
  --> tests/ui/invalid_pyfunction_definition.rs:11:9
   |
11 |         fn bug() {}
   |         ^^
